add and show order menu
